--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -283,6 +283,8 @@ jobs:
             sdk: "https://downloads.openwrt.org/snapshots/targets/x86/generic/openwrt-sdk-x86-generic_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
           - arch: "mipsel_24kc"
             sdk: "https://downloads.openwrt.org/snapshots/targets/ramips/mt7621/openwrt-sdk-ramips-mt7621_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
+          - arch: "mips_mips32"
+            sdk: "https://downloads.openwrt.org/snapshots/targets/bcm63xx/generic/openwrt-sdk-bcm63xx-generic_gcc-11.2.0_musl.Linux-x86_64.tar.xz"
           - arch: "arm_mpcore"
             sdk: "https://downloads.openwrt.org/snapshots/targets/oxnas/ox820/openwrt-sdk-oxnas-ox820_gcc-11.2.0_musl_eabi.Linux-x86_64.tar.xz"
           - arch: "arm_cortex-a5_vfpv4"
